--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+
+    //Zxing Barcode Reader
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+
 }
