--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ndroid="http://schemas.android.com/apk/distribution"
     package="faridnet.com.pesquisaapp">
 
     <application
@@ -9,9 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PesquisaListActivity"></activity>
-        <activity android:name=".activity.EditPesquisaProdutoActivity" />
-        <activity android:name=".activity.PesquisaProdutoListActivity" />
+        <activity android:name=".activity.PesquisaListActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".activity.EditPesquisaProdutoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.PesquisaProdutoListActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".activity.SplashScreen"
             android:theme="@style/SplashScreen">
             <intent-filter>
