--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,21 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-
     //Zxing Barcode Reader
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'com.google.zxing:core:3.2.1'
-    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    implementation 'com.google.zxing:core:3.2.0'
+    implementation "com.journeyapps:zxing-android-embedded:3.6.0"
+    implementation "com.google.zxing:core:3.3.3"
+
+    // google vision gradle
+    //implementation 'com.google.android.gms:play-services-vision:15.0.2'
+
+    //Navigation Components
+    def nav_version = "2.1.0"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
 }
